[gd_scene load_steps=3 format=3 uid="uid://b43xd355f3bju"]

[ext_resource type="Script" path="res://scripts/savegame_selection.gd" id="1_45x0a"]
[ext_resource type="Script" path="res://scripts/fancy_menu_button.gd" id="2_p2gpu"]

[node name="SavegameSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_45x0a")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.233925, 0.233925, 0.233925, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 11

[node name="SelectSavegameLabel" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Select save file"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="Savegames" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddSavegame" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Add save file"
script = ExtResource("2_p2gpu")

[node name="ConfirmDeleteSave" type="ConfirmationDialog" parent="ColorRect/MarginContainer"]
unique_name_in_owner = true
title = "ARE YOU SURE?"
initial_position = 1
size = Vector2i(282, 100)
dialog_text = "Delete the save file
and lose all data?"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/AddSavegame" to="." method="_on_add_savegame_pressed"]
[connection signal="canceled" from="ColorRect/MarginContainer/ConfirmDeleteSave" to="." method="_on_confirm_delete_save_canceled"]
[connection signal="confirmed" from="ColorRect/MarginContainer/ConfirmDeleteSave" to="." method="_on_confirm_delete_save_confirmed"]
